Log missing cues correctly https://bugs.webkit.org/show_bug.cgi?id=185499 <rdar://problem/40113821>

Reviewed by Daniel Bates.

No new tests, tested manually.

* html/track/InbandGenericTextTrack.cpp:
(WebCore::InbandGenericTextTrack::removeGenericCue): Log the cue we searched for, not
the NULL cue.


Canonical link: https://commits.webkit.org/200996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231643 268f45cc-cd09-0410-ab3c-d52691b4dbfc